# amplifier-session-storage

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGES_SUMMARY.md  CHUNKING_ARCHITECTURE_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PHASE_1_COMPLETE.md  PHASE_1_FINAL_SUMMARY.md  README.md  READY_FOR_SESSION_ANALYST.md  SCHEMA_COMPATIBILITY.md  VECTOR_EXTERNALIZATION_ARCHITECTURE.md  VERIFICATION_REPORT.md  WORKSPACE_STRUCTURE.md  pyproject.toml  test_cosmos_connection.py
amplifier_session_storage/: __init__.py  chunking.py  content_extraction.py  exceptions.py  id_utils.py  logging_utils.py  protocol.py  sanitization.py  utils.py
amplifier_session_storage/access/: __init__.py  controller.py  permissions.py
amplifier_session_storage/analyst/: __init__.py  queries.py
amplifier_session_storage/backends/: __init__.py  base.py  cosmos.py  duckdb.py  sqlite.py
amplifier_session_storage/blocks/: __init__.py  reader.py  sequence.py  types.py  writer.py
amplifier_session_storage/cosmos/: __init__.py  chunking.py  client.py  file_storage.py  storage.py
amplifier_session_storage/embeddings/: __init__.py  azure_openai.py  base.py  cache.py  mixin.py  openai.py  resilience.py
amplifier_session_storage/facets/: __init__.py  indexes.py  query_builder.py  rebuilder.py  service.py  types.py  updater.py
amplifier_session_storage/hybrid/: __init__.py  file_storage.py
amplifier_session_storage/identity/: __init__.py  azure_cli_provider.py  config_provider.py  context.py  login.py  provider.py  types.py
amplifier_session_storage/local/: __init__.py  events_log.py  file_ops.py  session_store.py  storage.py
amplifier_session_storage/membership/: __init__.py  store.py
amplifier_session_storage/migration/: __init__.py  migrator.py  types.py
amplifier_session_storage/search/: __init__.py  mmr.py
amplifier_session_storage/storage/: __init__.py  base.py  cosmos.py  hybrid.py  local.py
amplifier_session_storage/sync/: __init__.py  client.py  conflict.py  engine.py  server.py  tracker.py  version.py
amplifier_session_storage/synced/: __init__.py  storage.py
amplifier_session_storage/tool_module/: __init__.py  tool.py
amplifier_session_storage/tools/: __init__.py  session_tool.py
behaviors/session-storage/: behavior.md
behaviors/session-storage/context/: session-tool-instructions.md
docs/: AMPLIFIER_INTEGRATION.md  API_DESIGN.md  AZURE_OPENAI_SETUP.md  COSMOS_DB_BEST_PRACTICES.md  COSMOS_SETUP.md  COSMOS_VECTOR_PERFORMANCE.md  DUCKDB_BEST_PRACTICES.md  EMBEDDING_STRATEGY.md  HYBRID_SEARCH_GUIDE.md  MULTI_VECTOR_IMPLEMENTATION.md  SCHEMA.md  SCHEMA_MAPPING.md  SESSION_ANALYST_INTEGRATION.md  SESSION_ANALYST_MIGRATION.md  SESSION_ANALYST_TOOL_DESIGN.md  SETTINGS_YAML_DESIGN.md  SQLITE_BEST_PRACTICES.md  UPGRADE_GUIDE.md  VECTOR_SCHEMA_DESIGN.md  VECTOR_SEARCH.md
scripts/: load_real_project.py  load_real_session.py  test_cosmos_operations.py
tests/: __init__.py  conftest.py  test_activity_based_detection.py  test_azure_openai_embeddings.py  test_blocks.py  test_chunking.py  test_content_extraction.py  test_cosmos_backend_integration.py  test_cosmos_file_storage.py  test_cosmos_integration.py  test_cosmos_live.py  test_cosmos_metadata.sh  test_cosmos_real_connection.py  test_discovery_apis.py  test_duckdb_backend.py  test_duckdb_vector_search.py  test_embedding_cache.py  test_facets.py  test_file_storage_integration.py  test_id_utils.py  test_identity.py  test_metadata_preservation.py  test_migration.py  test_mmr.py  test_protocol_split.py  test_quick_metadata_validation.py  test_sanitization.py  test_schema_validation.py  test_session_store.py  test_session_tool.py  test_sqlite_backend.py  test_storage.py  test_sync_filter.py  test_tool_module.py
