[project]
name = "amplifier-session-storage"
version = "0.2.0"
description = "Enhanced session storage for Amplifier with hybrid search and multiple backends"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
keywords = ["amplifier", "session", "storage", "cosmos", "azure", "multi-tenant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Cosmos DB support (azure-cosmos + azure-identity for AAD auth)
# Note: azure-cosmos 4.9.0 is the last version with stable async partition_key support
cosmos = [
    "azure-cosmos>=4.5.0,<4.10.0",
    "azure-identity>=1.15.0",
    "aiohttp>=3.11.0",  # Security fix: CVE vulnerabilities in <3.11
]
# Real-time sync support
sync = [
    "aiohttp>=3.11.0",  # Security fix: CVE vulnerabilities in <3.11
]
# Azure OpenAI embeddings support
azure-openai = [
    "azure-ai-inference>=1.0.0b9",
    "azure-core>=1.30.0",
]
# OpenAI direct embeddings support
openai = [
    "openai>=1.0.0",
]
# DuckDB backend support
duckdb = [
    "duckdb>=0.10.0",
]
# SQLite backend support
sqlite = [
    "aiosqlite>=0.19.0",
]
# Full installation (all optional features)
all = [
    "amplifier-session-storage[cosmos,sync,azure-openai,openai,duckdb,sqlite]",
]

[project.urls]
Homepage = "https://github.com/colombod/amplifier-session-storage"
Documentation = "https://github.com/colombod/amplifier-session-storage#readme"
Repository = "https://github.com/colombod/amplifier-session-storage"
Issues = "https://github.com/colombod/amplifier-session-storage/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_session_storage"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "amplifier-session-storage[all]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingModuleSource = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env_files = [".env"]
markers = [
    "integration: marks tests as integration tests (require external services like Cosmos DB)",
]
